# ai-construction-manager

./: .gitignore  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py  settings.py
apps/api/app/api/v1/: deps.py  router.py
apps/api/app/api/v1/routes/: calculations.py  engine_v1.py  estimates.py  intake.py  projects.py
apps/api/app/common/: body_limit.py  context.py  errors.py  ids.py  jwt_auth.py  logging.py  rate_limit_redis.py
apps/api/app/contracts/: input_v1.py  intake_api.py  intake_v1_1.py  result_v1.py
apps/api/app/contracts/engine_v1/: __init__.py  input.py  profile.py  result.py
apps/api/app/domain/calc/: __init__.py  engine_v0.py  engine_v1.py  engine_v1_skeleton.py  errors.py  profile_loader.py  profile_registry.py  recipes_loader.py  registry_v0.py  registry_v1.py
apps/api/app/domain/intake/: __init__.py  config_loader.py  location_profiles.py  rules_engine.py
apps/api/app/infra/db/: session.py
apps/api/app/infra/redis/: client.py  idempotency.py
apps/api/app/infra/repo/: audit_repo.py  estimates_repo.py  idempotency_repo.py  projects_repo.py
apps/api/app/tests/: test_engine_v1.py  test_frontend_api_alignment.py  test_intake_v1_1.py  test_profile_loader.py  test_projects_cors_and_auth.py  test_projects_tenant.py  test_projects_transactions.py
apps/api/app/usecases/: estimates.py  intake.py  projects.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 4dedd532792c_init_schema.py  a71cc5f39fb0_add_audit_events.py
apps/api/scripts/: wait_for_db.sh
(+48 files in other folders)
